# train-conductor-world-map

./: README.md  achievements.json  generate_tiles.sh  map.csv  pyproject.toml  test.py  tiles.csv  tiles.json  tiles_csv_to_json.py  train-conductor-world.tmx
.github/workflows/: test.yml
src/train_conductor_world_map/: __init__.py
test/: map_test.py
