[project]
name = "train-conductor-world-map"
description = "Tools for processing the map of Train Conductor World"
version = "2025.12.23.0"
readme = "README.md"
authors = [
    { name = "Evan Kohilas" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[project.scripts]
train-conductor-world-map = "train_conductor_world_map:main"
